add toast + tutor board + schedule page
